# HIS

./: CLAUDE.md  MARKET_SNAPSHOT_README.md  README.md  creator-profile-agentic-ai.md  inventory.csv  investor-deck-screening.html  investor-deck-screening.md  investor-deck.md  knowledge-os.html  market_snapshot.py  market_trends.csv  notebooklm_source.md  pyproject.toml  run_market_snapshot.bat  run_market_snapshot.sh  systems-architecture.html  webstats.csv
data/: glossary.yaml  open_loops.yaml  pending_writes.yaml  vault_files.yaml
health_advisor/: __init__.py  __main__.py  advisor.py  config.py  drive_io.py  glossary.py  guardrails.py  open_loops.py
tests/: test_advisor.py  test_config_and_loops.py  test_drive_io.py  test_glossary.py  test_guardrails.py
