[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "health-advisor"
version = "0.1.0"
description = "Jane-side, health-scoped reference layer over Kent's Vault (personal reference, not medical advice)."
requires-python = ">=3.10"
dependencies = ["PyYAML>=6"]

[tool.setuptools]
packages = ["health_advisor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
